# DeepAF

./: LICENSE  MANIFEST.in  README.md  create_tensors.py  setup.cfg  setup.cfg.txt  setup.py
deepaf/: create_tensors.py  edge2vec.py  query_model.py  train_model.py  transition.py
deepaf/utils/: data_augment.py  dataset.py  densenet3D.py  densenet_model.py  distance_encoding.py  embed.py  get_PDB.py  get_interface.py  get_matrix.py  training_plots.py
utils/: dataset.py  distance_encoding.py  get_interface.py
